src/test/ui/underscore-lifetime/where-clause-trait-impl-region.rust2015.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/where-clause-trait-impl-region.rs:11:17
   |
LL |     T: WithType<&u32>
   |                 ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a, T> Foo for Vec<T>
LL | where
LL ~     T: WithType<&'a u32>
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
