src/test/ui/underscore-lifetime/where-clause-trait-impl-region.rs
// revisions: rust2015 rust2018
//[rust2018] edition:2018

trait WithType<T> {}
trait WithRegion<'a> { }

trait Foo { }

impl<T> Foo for Vec<T>
where
    T: WithType<&u32>
//[rust2015,rust2018]~^ ERROR missing lifetime specifier [E0106]
{ }

fn main() {}
